# GaussianAnsatz

./: .gitignore  Instructions.md  README.md  minimal_working_example.ipynb  minimal_working_example.py  pyproject.toml  test.ipynb  utils.py
Architectures/: dnn.py  factorizer.py  ifn.py  utils.py
JEC/: DNN.py  EFN.py  JEC_DNN.job  JEC_EFN.job  JEC_PFN.job  JEC_PFN_PID.job  JEC_utils.py  PFN.py  PFN_PID.py  config.py  download_dataset.py  plots.py
JEC/Models/: DNN.npy
src/GaussianAnsatz/: _version.py  archs.py  dnn.py  factorizer.py  utils.py
